# deltat

./: CMakeLists.txt  README.md
deltat/: CMakeLists.txt
deltat/include/deltat/: timeit.hpp
deltat/include/deltat/timers/: chronotimer.hpp  ktimer.hpp
deltat/src/: chronotimer.cpp
samples/: CMakeLists.txt
samples/src/: sample.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
timeit/: CMakeLists.txt
timeit/include/: chronotimer.hpp  ktimer.hpp  timeit.hpp
timeit/include/timeit/: timeit.hpp
timeit/src/: chronotimer.cpp
